[package]
name = "photoprintit-tools"
description = "A collection of tools for photoprintit software"
version = "0.1.0"
authors = ["Jan Baudisch (flyingP0tat0) <dev@baudisch.xyz>"]
repository = "https://github.com/flyingP0tat0/photoprintit-tools.git"
readme = "README.md"
keywords = ["photoprintit", "cli", "tool"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
log = "0.4"
nom = "4.2"
pretty_env_logger ="0.3"
reqwest = "0.9"
structopt = "0.2"

[profile.release]
lto = true
codegen-units = 1
